# Aarkham

./: ENV_INTEGRATION_SUMMARY.md  README.md  WALLETCONNECT_FIX.md  package-lock.json  package.json  pnpm-lock.yaml  test_env_vars.py  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/home/: page-clean.tsx  page-old.tsx.backup  page.tsx
app/scanning-page/: page.tsx
components/: 3d-box-loader-animation.tsx  MarqueeDemo.tsx  about-our-technology.tsx  dragable-cube-component.tsx  dragable-cubes.tsx  faq-section.tsx  flash-loan-dashboard.tsx  footer.tsx  hero-section.tsx  navigation.tsx  preloader.tsx  qr-scanner.tsx  services-component.tsx  stars.tsx
components/chat/: chat-input.tsx  chat-message.tsx  chat-toggle.tsx  chat-widget.tsx  chat-window.tsx  index.ts
components/ui/: moving-border.tsx  resizable-navbar.tsx  shape-landing-hero.tsx
contracts/: COMPATIBILITY_ANALYSIS.md  IMPLEMENTATION_GUIDE.md
contracts/script/: FlashLoan.s.sol
contracts/src/: FlashLoanExecutor.sol  (+3 more)
flash-loan-agent/: .gitignore  DEPLOYMENT.md  Dockerfile  README_API.md  app.py  docker-compose.yml  dummy_loan_tools.py  flash_loan_api_specs.txt  flash_loan_tools.py  models.py  mongo-init.js  pyproject.toml  railway.toml  web_client.html
flash-loan-agent/static/: index.html
hooks/: UseFlashLoanExecutor.ts  index.ts  use-auth.ts  use-chat.ts
lib/: abi.ts  advanced-strategies.ts  chat-service.ts  functions.ts  polyfills.ts  signed-transaction-utils.ts  wagmi.ts
providers/: client-only-provider.tsx  wagmi-provider.tsx
types/: chat.ts  interfaces.ts
utils/: qr-validitor.ts
(+49 files in other folders)
